test/cases/fail/03_type_mismatch.ky
#test(fail)
fn type_mismatch_case() -> int {
    int x = 1;
    x = "oops";
    return x;
}

@main(main) {
    int x = 1;
    x = "oops";
    print(x);
}
